# MailSweep

./: .gitignore  LICENSE  PROGRESS.md  README.md  mailsweep.spec  pyproject.toml  rthook_certifi.py
.github/workflows/: bump-version.yml  release.yml
mailsweep/: cli.py  config.py  main.py
mailsweep/ai/: context.py  providers.py
mailsweep/db/: repository.py  schema.py
mailsweep/imap/: connection.py  oauth2.py
mailsweep/models/: account.py  folder.py  message.py
mailsweep/ui/: account_dialog.py  ai_dock.py  filter_bar.py  folder_panel.py  log_dock.py  main_window.py  message_table.py  progress_panel.py  settings_dialog.py  treemap_widget.py
mailsweep/utils/: keyring_store.py  mime_utils.py  size_fmt.py
mailsweep/workers/: ai_worker.py  backup_worker.py  delete_worker.py  detach_worker.py  incremental_scan.py  move_worker.py  qt_scan_worker.py  remove_label_worker.py  scan_worker.py
scripts/: create_icons.py
tests/: test_ai.py  test_db.py  test_mime_utils.py  test_scan_worker.py
