[project]
name = "mailsweep"
version = "0.2.0"
description = "IMAP Mailbox Analyzer & Cleaner — visualize and reclaim email storage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "imapclient>=3.0.0",
    "PyQt6>=6.6.0",
    "squarify>=0.4.3",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "msal>=1.26.0",
    "keyring>=24.3.0",
    "chardet>=5.2.0",
]

[project.urls]
Repository = "https://github.com/jitrc/MailSweep"
"Bug Tracker" = "https://github.com/jitrc/MailSweep/issues"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-qt>=4.3.1", "ruff", "mypy"]

[project.scripts]
mailsweep = "mailsweep.main:main"
mailsweep-cli = "mailsweep.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mailsweep"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
